examples/test/testpolicy5469.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5469
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key19: value40
      key24: value43
      key11: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value8
      podSelector:
        matchLabels:
          key32: value22
